[May/Luke] {commit} {first commit}

--- a/client/src/templates/teamPage.hbs
+++ b/client/src/templates/teamPage.hbs
@@ -3,4 +3,6 @@
     <!-- TODO: Add your name as a list element -->
     <li>Maddi</li>
     <li>Kevin</li>
+    <li>May</li>
+    <li>Luke</li>
 </ul>
