May/Komal-US1-Next Patient Page For Carers

--- a/client/src/templates/nextPatientPage.hbs
+++ b/client/src/templates/nextPatientPage.hbs
@@ -1,8 +1,7 @@
 <h1>Next Patient</h1>
-<ul>
-    {{#each contacts}}
-    <p>Name: {{this.name}}</p>
-    <p>Address: {{this.address}}</p>
-    <p>Suburb: {{this.suburb}}</p>
-    {{/each}}
-</ul>
+<div>
+    <p>Name: {{this.contact.name}}</p>
+    <p>Address: {{this.contact.address}}</p>
+    <p>Suburb: {{this.contact.suburb}}</p>
+    <p>Time: {{this.contact.time}}</p>
+</div>
