May/Luke US#3 - Patient icon on Homepage

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -1,3 +1,15 @@
 #home {
   font-style: italic;
 }
+
+p {
+	text-align:center;
+}
+
+#rightIcon	{
+	display: inline-block;
+	position:absolute;
+	right: 0;
+	top:96px;
+}
+
