Kevin/Katrina- added carerinfopage

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -1,4 +1,4 @@
-#home {
+.home {
   font-style: italic;
 }
 h1{
@@ -8,7 +8,7 @@ p {
 	text-align:center;
 }
 
-#rightIcon	{
+.rightIcon	{
 	display: inline-block;
 	position:absolute;
 	right: 0;
