--- a/client/src/templates/homePage.hbs
+++ b/client/src/templates/homePage.hbs
@@ -1,6 +1,10 @@
-<div id="home">
-  <p>Date: <span class="clock-date">{{date}}</span></p>
-  <p>Time: <span class="clock-time">{{time}}</span></p>
-  
-  <i id="rightIcon" class="fas fa-address-book fa-3x"></i>
+<div class="home">
+  <p>Date:
+    <span class="clock-date">{{date}}</span>
+  </p>
+  <p>Time:
+    <span class="clock-time">{{time}}</span>
+  </p>
+
+  <i class="rightIcon fas fa-address-book fa-3x"></i>
 </div>
