--- a/client/src/templates/carerInfoPage.hbs
+++ b/client/src/templates/carerInfoPage.hbs
@@ -1,3 +1,4 @@
-<p>Name: Catie</p>
-<p>Service: Cooking, Cleaning</p>
-<p>Time of appointment: 3:00pm</p>
+<h1>Carer</h1>
+<p>Name: {{this.contact.name}}</p>
+<p>Service: {{this.contact.service}}</p>
+<p>Time of appointment: {{this.contact.time}}</p>
