May/Kevin -linking carerinfo to right buttons

--- a/client/src/templates/patientHomePage.hbs
+++ b/client/src/templates/patientHomePage.hbs
@@ -1,3 +1,9 @@
 <div class="home">
+    <p>Date:
+        <span class="clock-date">{{date}}</span>
+    </p>
+    <p>Time:
+        <span class="clock-time">{{time}}</span>
+    </p>
     <i class="rightIcon fas fa-user-md fa-3x"></i>
 </div>
