Luke - Back to Home functionality

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -8,6 +8,16 @@ p {
 	text-align:center;
 }
 
+.homeIcon	{
+	display: inline-block;
+	position:absolute;
+	left: 42%;	
+}
+
+.homeIconSection {
+	padding-bottom: 30px;
+}
+
 .rightIcon	{
 	display: inline-block;
 	position:absolute;
