--- a/client/src/templates/nextPatientPage.hbs
+++ b/client/src/templates/nextPatientPage.hbs
@@ -1,5 +1,8 @@
-<h1>Next Patient</h1>
+<div class="homeIconSection">
+	<i class="homeIcon fas fa-home fa-2x"></i>
+</div>
 <div>
+	<h1>Next Patient</h1>
     <p>Name: {{this.contact.name}}</p>
     <p>Address: {{this.contact.address}}</p>
     <p>Suburb: {{this.contact.suburb}}</p>
