Maddi/May - Add NEW status if Next Patient is new

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -15,3 +15,11 @@ p {
 	top:96px;
 }
 
+.status {
+    background-color: pink;
+    text-transform: uppercase;
+    padding: 2px;
+    color: #3F484A;
+    font-size: 16px;
+}
+
