--- a/client/src/templates/carerInfoPage.hbs
+++ b/client/src/templates/carerInfoPage.hbs
@@ -1,4 +1,4 @@
-<h1>Carer</h1>
+<h1>Carer Info</h1>
 <p>Name: {{this.contact.name}}</p>
 <p>Service: {{this.contact.service}}</p>
 <p>Time of appointment: {{this.contact.time}}</p>
