Kevin/Maddi - Style notification first pass

--- a/client/src/templates/CarerNotification.hbs
+++ b/client/src/templates/CarerNotification.hbs
@@ -1,1 +1,8 @@
-{{name}} is 20 minutes away. Press 'right' button for more info.
+<p class="notif-top">Your carer<br>
+  <span class="highlight">{{name}}</span><br>
+  is <span class="alert-time">20 minutes</span> away
+</p>
+<p>
+  <i class="fas fa-hands-helping fa-3x"></i>
+</p>
+<p class="detail">Press <span class="highlight">right</span> button for more info</p>
