--- a/framework/styles/notification.scss
+++ b/framework/styles/notification.scss
@@ -2,10 +2,10 @@
   background-color: black;
   color: white;
   position: absolute;
-  height: 160px;
-  width: 160px;
-  top: 50px;
-  left: 50px;
+  height: 200px;
+  width: 200px;
+  top: 30px;
+  left: 30px;
   opacity: 0.9;
   z-index: 100;
   padding: 20px;
@@ -26,9 +26,18 @@
 }
 
 #notification-button-right {
- text-align: right
+ text-align: right;
 }
 
 #notification-button-left {
- text-align: left
+ text-align: left;
 }
+
+.alert-time {
+  color: red;
+}
+
+.highlight {
+  color: lightgreen;
+}
+
