Luke - added test for Carer Info Question

--- a/client/src/templates/carerInfoPage.hbs
+++ b/client/src/templates/carerInfoPage.hbs
@@ -2,3 +2,4 @@
 <p>Name: {{this.contact.name}}</p>
 <p>Service: {{this.contact.service}}</p>
 <p>Time of appointment: {{this.contact.time}}</p>
+<p>{{this.question}}</p>
