--- a/framework/templates/watch.hbs
+++ b/framework/templates/watch.hbs
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group">
             <label>Message</label>
-            <textarea id="notification-form-message" class="notification-form-message" maxlength="200"></textarea>
+            <textarea id="notification-form-message" class="notification-form-message" maxlength="200" readonly></textarea>
         </div>
         <button type="button" id="notification-form-send">Send</button>
 
