Kevin/Maddie: added Icons & Tests

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -26,6 +26,13 @@ p {
 	top:96px;
 }
 
+.leftIcon {
+	display: inline-block;
+	position:absolute;
+	left: 0;
+	top:96px;
+}
+
 .status {
     background-color: pink;
     text-transform: uppercase;
