--- a/client/src/templates/emergencyContactPage.hbs
+++ b/client/src/templates/emergencyContactPage.hbs
@@ -1,4 +1,4 @@
 <div class="homeIconSection">
     <i class="homeIcon fas fa-home fa-2x"></i>
 </div>
-<p>You have notified the emergency contact.</p>
+<h1>You have notified the emergency contact.</h1>
