--- a/client/src/templates/patientHomePage.hbs
+++ b/client/src/templates/patientHomePage.hbs
@@ -5,5 +5,6 @@
     <p>Time:
         <span class="clock-time">{{time}}</span>
     </p>
+    <i class="leftIcon fas fa-ambulance fa-3x"></i>
     <i class="rightIcon fas fa-user-md fa-3x"></i>
 </div>
