--- a/client/src/templates/emergencyContactPage.hbs
+++ b/client/src/templates/emergencyContactPage.hbs
@@ -2,3 +2,4 @@
     <i class="homeIcon fas fa-home fa-2x"></i>
 </div>
 <h1>You have notified the emergency contact.</h1>
+<i class="ambulance-start fas fa-ambulance fa-3x"></i>
