Maddie/Kevin: added emergency button to carerHomePage

--- a/client/src/templates/homePage.hbs
+++ b/client/src/templates/homePage.hbs
@@ -5,6 +5,6 @@
   <p>Time:
     <span class="clock-time">{{time}}</span>
   </p>
-
+  <i class="leftIcon fas fa-ambulance fa-3x"></i>
   <i class="rightIcon fas fa-address-book fa-3x"></i>
 </div>
