--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -3,6 +3,7 @@
 }
 h1{
 	text-align: center;
+	margin-bottom:10px;
 }
 p {
   text-align: center;
@@ -13,10 +14,11 @@ p {
 	display: inline-block;
 	position:absolute;
 	left: 42%;
+	top: 0px;
 }
 
 .homeIconSection {
-	padding-bottom: 30px;
+	padding-bottom: 16px;
 }
 
 .rightIcon	{
@@ -50,6 +52,7 @@ p {
     font-size: 16px;
 }
 
+
 .ambulance-start {
 	display: inline-block;
 	position:absolute;
@@ -65,3 +68,30 @@ p {
 }
 
 
+.readyYes {
+	display: inline-block;
+	position: absolute;
+	right: 0px;
+	top: 45%;
+}
+
+.readyNo {
+	display: inline-block;
+	position: absolute;
+	left: 0px;
+	top: 45%;
+}
+
+.ready-question {
+	background-color: pink;
+    text-transform: uppercase;
+    padding: 2px;
+    color: #3F484A;
+    font-size: 16px;
+}
+
+.readyNotification {
+	margin-top: 20%;
+	border: 2px solid pink;
+	padding: 16px 0 16px 0;
+}
