--- a/client/src/templates/carerInfoPage.hbs
+++ b/client/src/templates/carerInfoPage.hbs
@@ -1,5 +1,22 @@
-<h1>Carer Info</h1>
-<p>Name: {{this.contact.name}}</p>
-<p>Service: {{this.contact.service}}</p>
-<p>Time of appointment: {{this.contact.time}}</p>
-<p>{{this.question}}</p>
+<div class="homeIconSection">
+	<i class="homeIcon fas fa-home fa-2x"></i>
+</div>
+
+<div class="readyYes">
+	<i class="fas fa-thumbs-up fa-2x"></i>
+</div>
+
+
+<div class="readyNo">
+	<i class="fas fa-thumbs-down fa-2x"></i>
+</div>
+
+
+<div>
+	<h1>Carer Info</h1>
+	<p>Name: {{this.contact.name}}</p>
+	<p>Service: </p>
+	<p>{{this.contact.service}}</p>
+	<p>Time: {{this.contact.time}}</p>
+	<p class="ready-question">{{this.question}}</strong></p>
+</div>	
