--- a/client/src/templates/patientHomePage.hbs
+++ b/client/src/templates/patientHomePage.hbs
@@ -6,5 +6,6 @@
         <span class="clock-time">{{time}}</span>
     </p>
     <i class="leftIcon fas fa-ambulance fa-3x"></i>
+    <p class="leftIconText">Press 2 sec</p>
     <i class="rightIcon fas fa-user-md fa-3x"></i>
 </div>
