--- a/client/src/templates/CarerNotification.hbs
+++ b/client/src/templates/CarerNotification.hbs
@@ -6,3 +6,6 @@
   <i class="fas fa-hands-helping fa-3x"></i>
 </p>
 <p class="detail">Press <span class="highlight">right</span> button for more info</p>
+<audio autoplay>
+  <source src="/client/src/sounds/definite.mp3" type="audio/mpeg">
+</audio>
