--- a/client/src/templates/CarerNotification.hbs
+++ b/client/src/templates/CarerNotification.hbs
@@ -7,5 +7,5 @@
 </p>
 <p class="detail">Press <span class="highlight">right</span> button for more info</p>
 <audio autoplay>
-  <source src="/client/src/sounds/definite.mp3" type="audio/mpeg">
+  <source src="/public/sounds/definite.mp3" type="audio/mpeg">
 </audio>
