Kevin/May Patient icon changed

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -28,6 +28,16 @@ p {
 	top:96px;
 }
 
+.rightIcon2	{
+	display: inline-block;
+	position:absolute;
+	right: 0;
+	top:96px;
+	width: 60px;
+}
+
+
+
 .leftIcon {
 	display: inline-block;
 	position:absolute;
