--- a/client/src/templates/homePage.hbs
+++ b/client/src/templates/homePage.hbs
@@ -7,5 +7,5 @@
   </p>
   <i class="leftIcon fas fa-ambulance fa-3x"></i>
   <p class="leftIconText">Press 2 sec</p>
-  <i class="rightIcon fas fa-address-book fa-3x"></i>
+  <img class="rightIcon2" src="../images/patient.png" >
 </div>
