Luke - Feedback Results added

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -62,6 +62,14 @@ p {
     font-size: 16px;
 }
 
+.bottomIcon {
+	display: inline-block;
+	position:absolute;
+	left: 100px;
+	top:190px;
+}
+
+
 
 .ambulance-start {
 	display: inline-block;
