--- a/client/src/templates/patientFeedbackPage.hbs
+++ b/client/src/templates/patientFeedbackPage.hbs
@@ -2,3 +2,12 @@
     <i class="homeIcon fas fa-home fa-2x"></i>
 </div>
 <p>How are you feeling today?</p>
+
+<div id="">
+	<i class="leftIcon fas fa-smile fa-3x"></i>
+</div>
+
+<div id="">
+	<i class="rightIcon fas fa-frown fa-3x"></i>
+
+</div>
