--- a/client/src/templates/patientHomePage.hbs
+++ b/client/src/templates/patientHomePage.hbs
@@ -8,4 +8,5 @@
     <i class="leftIcon fas fa-ambulance fa-3x"></i>
     <p class="leftIconText">Press 2 sec</p>
     <i class="rightIcon fas fa-user-md fa-3x"></i>
+    <i class="bottomIcon fas fa-comment fa-3x"></i>
 </div>
