Natalia/Maddi/Katrina - Change new status functionality

--- a/client/src/templates/nextPatientPage.hbs
+++ b/client/src/templates/nextPatientPage.hbs
@@ -7,7 +7,7 @@
     <p>Address: {{this.contact.address}}</p>
     <p>Suburb: {{this.contact.suburb}}</p>
     <p>Time: {{this.contact.time}}</p>
-    {{#if this.contact.new}}
+    {{#if this.new}}
         <p class="status">new</p>
     {{/if}}
 </div>
