added changes post pres

--- a/client/src/templates/CarerNotification.hbs
+++ b/client/src/templates/CarerNotification.hbs
@@ -1,1 +1,5 @@
 {{name}} is 20 minutes away. Press 'right' button for more info.
+
+<audio autoplay>
+    <source src="/client/src/sounds/chimes-glassy.mp3" type="audio/mpeg" />
+</audio>
